<resources>
    <string name="app_name">Guardian Angels FA</string>
    <string name="guardian_angels">Guardian Angels</string>

    <string name="player_picture">Player Picture</string>

    <string name="home">Home</string>
    <string name="team">Team</string>

    <string name="upcoming">Upcoming</string>

    <string name="team_2_logo">Team 2 Logo</string>
    <string name="team_1_logo">Team 1 Logo</string>
    <string name="team_1">Team 1*</string>
    <string name="team_2">Team 2*</string>
    <string name="date">Date*</string>
    <string name="time">Time*</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="location">Location</string>
    <string name="select_team">Select Team</string>
    <string name="selected_team">Selected Team</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="games">GAMES</string>
    <string name="upcoming_matches">Upcoming Matches</string>
    <string name="corners">Corners</string>
    <string name="cards">Cards</string>
    <string name="possesions">Possesions</string>
    <string name="attack">Attacks</string>
    <string name="shooting">Shooting</string>
</resources>