<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                style="@style/IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/team1ImageContainer"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButton">

                <ImageView
                    android:id="@+id/team1Image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/team_1_logo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gaurdian_angels" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/team1NameTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/team_1"
                app:layout_constraintBottom_toBottomOf="@+id/team1ImageContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/team1ImageContainer"
                app:layout_constraintTop_toTopOf="@+id/team1ImageContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/team1NameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/guardian_angels" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/team2ImageContainer"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team1ImageContainer">


                <ImageView
                    android:id="@+id/team2Image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/team_2_logo"
                    android:scaleType="centerCrop" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/team2NameTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/team_2"
                app:layout_constraintBottom_toBottomOf="@+id/team2ImageContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/team2ImageContainer"
                app:layout_constraintTop_toTopOf="@+id/team2ImageContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/team2NameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/date"
                app:layout_constraintEnd_toStartOf="@+id/timeTF"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team2ImageContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:hint="@string/time"
                app:layout_constraintBaseline_toBaselineOf="@+id/dateTF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dateTF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tournamentNameTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/tournament_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tournamentNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTF"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tournamentNameTF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectTeamButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/select_team"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTF" />

            <TextView
                android:id="@+id/selectedPlayersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/selected_team"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/count"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectTeamButton"
                tools:visibility="visible" />

            <com.google.android.material.chip.Chip
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="gone"
                app:layout_constraintBaseline_toBaselineOf="@+id/selectedPlayersTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="1"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selectedPlayerRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:clipToPadding="false"
                android:paddingBottom="72dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedPlayersTitle"
                tools:listitem="@layout/add_upcoming_match_selected_team_list_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/pink"
        android:drawableEnd="@drawable/ic_done"
        android:fontFamily="@font/poppins"
        android:text="@string/done"
        android:textColor="@color/white" />
</FrameLayout>