<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TitleTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Upcoming Title-->
    <TextView
        android:id="@+id/upcomingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway"
        android:text="@string/upcoming"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <!-- Upcoming Match Card -->
    <TextView
        android:id="@+id/moreUpcomingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/ic_next"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:text="See More"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/upcomingTV"
        app:layout_constraintEnd_toEndOf="@+id/upcomingMatchCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/upcomingMatchCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingTV">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_match_gradient">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/team1LogoContainer"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <ImageView
                            android:id="@+id/team1Logo"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/gaurdian_angels" />
                    </com.google.android.material.card.MaterialCardView>

                    <!-- In case no logo is available for the opposing team -->
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/team1NoLogoContainer"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <TextView
                            android:id="@+id/team1NoLogoTV"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/raleway_bold_italic"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="24dp"
                            tools:ignore="SpUsage"
                            tools:text="GA" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/gaurdianNameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@string/guardian_angels"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Timings -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/matchDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="FRI 22 JAN"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/matchKickOffTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="KO: 1:30 PM"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@color/black" />
                </LinearLayout>


                <!--Opposing-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <ImageView
                            android:id="@+id/opposingLogo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:background="@drawable/gaurdian_angels" />

                    </com.google.android.material.card.MaterialCardView>
                    <!-- In case no logo is available for the opposing team -->
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/opposingNoLogoContainer"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <TextView
                            android:id="@+id/opposingNoLogoTV"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/raleway_bold_italic"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="FC"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="24dp"
                            tools:ignore="SpUsage" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/opposingNameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="FC Barcelona"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <!-- Stats -->
    <TextView
        android:id="@+id/statsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway"
        android:text="Stats"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingMatchCard" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gamesStatCard"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsTV">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/games"
                android:textAppearance="@style/MainTotalCardTextStyle"
                android:textColor="@color/mainStatGames" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|end"
                android:text="69"
                android:textAppearance="@style/CountTextStyle"
                android:textColor="@color/mainStatGames" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wonStatCard"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/statsTV">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="WON"
                android:textAppearance="@style/MainTotalCardTextStyle"
                android:textColor="@color/mainStatWon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|end"
                android:text="59"
                android:textAppearance="@style/CountTextStyle"
                android:textColor="@color/mainStatWon" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gameStatCard"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/gamesStatCard"
        app:layout_constraintTop_toBottomOf="@+id/gamesStatCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="DRAW"
                android:textAppearance="@style/MainTotalCardTextStyle"
                android:textColor="@color/mainStatDraw" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|end"
                android:text="7"
                android:textAppearance="@style/CountTextStyle"
                android:textColor="@color/mainStatDraw" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/lostStatCard"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/wonStatCard"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/wonStatCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="LOST"
                android:textAppearance="@style/MainTotalCardTextStyle"
                android:textColor="@color/mainStatLost" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|end"
                android:text="3"
                android:textAppearance="@style/CountTextStyle"
                android:textColor="@color/mainStatLost" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>